Fix logo not being clickable on mobile sizes

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -106,6 +106,7 @@ h5 {
 #masthead {
 	.main {
 		position: relative;
+		z-index: 2;
 	}
 	.side {
 		text-align: right;
